# Poetry_code_formatting_home_work

./: .coverage  .flake8  README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: decorators.py  generators.py  masks.py  processing.py  widget.py
tests/: test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
